# OmniGlyph

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOOD_FIRST_ISSUES.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  README.zh-CN.md  RELEASE.md  ROADMAP.md  SECURITY.md  llms.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: ai-discovery.md  api.md  mcp-server-card.md  mcp-tools.md  quickstart.md  release-notes-v0.1.0-alpha.md  release-notes-v0.6.0-beta.md  release-notes-v0.7.0-beta-draft.md  release-notes-v0.8-source-batch-draft.md  release-notes-v0.8.0-beta-draft.md  release-notes-v0.8.0-beta-draft.zh-CN.md
docs/architecture/: deterministic-mcp-guardrail.md  language-security-gateway.md  sandwich-architecture.md  stage-1-architecture.md  world-protocol-layer.md
docs/ecosystem/: mcp-registry-submission.md  pypi-publish.md
docs/integrations/: claude-code-mcp.md  claude-desktop-mcp.md  codex-mcp.md
docs/legal/: data-sources.md
docs/product/: development-handbook.md  logosgate-whitepaper.en.md  logosgate-whitepaper.zh-CN.md  omni-glyph-doctrine.md  positioning.md  project-status.md  v0.7-closeout.md  v0.8-closeout.md  v0.8-maintenance-log.md  v0.8.0b0-release-prep.md
docs/security/: mcp-safety.md
docs/specs/: lexicon-pack-standard.md  omniglyph-explanation-standard.md  policy-pack-standard.md  world-protocol-pack-standard.md
docs/superpowers/plans/: 2026-04-24-omniglyph-stage-1-mvp.md  2026-04-25-code-linter.md  2026-04-25-oes-explain-runtime.md  2026-04-25-release-hardening-0-4.md  2026-04-25-v0-6-security-dictionary-audit.md  2026-04-26-language-security-gateway.md  2026-04-28-world-protocol-pack-v0-1.md  2026-04-30-logosgate-mvp.md  2026-07-05-guardrail-review-packet-hardening.md  2026-07-05-guardrail-review-packet.md  2026-07-05-output-guardrail-cli.md  (+6 more)
docs/use-cases/: code-linter.md  security-dictionary-audit.md
examples/domain-packs/: building_materials.csv  software_development.csv
examples/logos-policies/: code_safety.json  marketing_integrity.json  trade_compliance.json
examples/poisoned-code/: generate_poison.py
examples/requests/: cross_border_inquiry.json
examples/scripts/: run_cross_border_demo.py
examples/security-policies/: intent_manifest.json
migrations/: 0001_initial_sqlite.sql
package-registry/: server.json
scripts/: artifact_audit.py  benchmark_lookup.py  demo_check.sh  mcp_smoke_test.sh  release_check.sh  wheel_smoke_test.sh
src/omniglyph/: __init__.py  api.py  audit.py  cli.py  code_linter.py  config.py  domain_pack.py  explanation.py  guardrail.py  language_security.py  lexicon_pack.py  mcp_server.py  normalization.py  normalizer.py  oes.py  parameter_schema.py  policy_pack.py  protocol_pack.py  repository.py  security_pack.py  sources.py  unihan.py
tests/: test_api.py  test_artifact_audit.py  test_audit.py  test_cli_guardrail.py  test_cli_product_tools.py  test_cli_scan_code.py  test_cli_version.py  test_code_linter.py  test_config.py  test_domain_pack.py  test_examples.py  test_explanation.py  test_guardrail.py  test_language_security.py  test_lexicon_pack.py  test_logos_cli.py  test_logos_decorator.py  test_logos_mcp.py  test_logos_models.py  test_logos_policy_examples.py  test_logos_validator.py  test_mcp.py  test_normalize_api.py  test_normalizer.py  test_oes.py  test_package_manifest.py  test_parameter_schema.py  test_policy_pack.py  test_protocol_pack.py  test_release_check.py  test_repository.py  test_sources.py  test_unihan.py
tests/fixtures/: UnicodeData.sample.txt  Unihan.sample.txt  domain_pack.csv
言法界枢/: LogosGate Whitepaper and Development Manual.md  LogosGate白皮书与开发手册.md  项目思路.md  项目思路.rtf
(+27 files in other folders)
