[project]
name = "omniglyph"
version = "0.3.2b0"
description = "Local-first symbol ground truth MCP server for AI agents"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "OmniGlyph contributors" }
]
keywords = ["mcp", "unicode", "agent", "homoglyph", "llm", "claude"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
omniglyph = "omniglyph.cli:main"
omniglyph-mcp = "omniglyph.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.urls]
Homepage = "https://github.com/aidi1723/OmniGlyph"
Repository = "https://github.com/aidi1723/OmniGlyph"
Issues = "https://github.com/aidi1723/OmniGlyph/issues"
Documentation = "https://github.com/aidi1723/OmniGlyph#readme"
